added front banner image and changed front banner to new image

--- a/ane.html
+++ b/ane.html
@@ -38,7 +38,7 @@
 			</div>
 		</nav>
 	<div class="fade-in">
-		<img src="images/front_banner.webp" alt="front_banner" style="width: 100%; height: auto; margin-top: 170px;">
+		<img src="images/deliverables_banner.png" alt="front_banner" style="width: 100%; height: auto; margin-top: 170px;">
 	<main>
 		<div class="header">
 			<div class="line"></div>
