changed one line to front banner

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</div>
 		</nav>
 	<div class="fade-in">
-		<img src="images/front_banner.webp" alt="front_banner" style="width: 100%; height: auto; margin-top: 170px;">
+		<img src="images/deliverables_banner.png" alt="front_banner" style="width: 100%; height: auto; margin-top: 170px;">
 	<main>
 		<div class="header">
 			<div class="line"></div>
@@ -54,7 +54,7 @@
 			<div class="line"></div>
 		</div>
 		<p class="poppins-light" style="text-align: center; color: white; font-size: 18px; margin-top: 20px;">
-			Angels are celestial beings that are often depicted as a messengers of God or as guardians of humans. They are commonly associated with light, purity, and divine will. In various religious texts, angels are described as having wings and a radiant appearance, symbolizing their heavenly nature.
+			Angels are celestial beings that are often depicted as messengers of God or as guardians of humans. They are commonly associated with light, purity, and divine will. In various religious texts, angels are described as having wings and a radiant appearance, symbolizing their heavenly nature.
 	</main>
 </body>
 <script>
