--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+	
     <meta charset="UTF-8" />
     <meta name="Description" content="This site brings exiting news about vr and the virtual world we live in">
     <title>Chains of heaven</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link rel="icon" type="image/png" href="images/Chains_Of_Heaven_4x.png">
 </head>
 <body>
 
@@ -50,11 +52,17 @@
 		
 		<div class="header">
 			<div class="line"></div>
-			<div class="header-center"><h2>angels</h2></div>
+			<div class="header-center"><h2>Angels</h2></div>
 			<div class="line"></div>
 		</div>
-		<p class="poppins-light" style="text-align: center; color: white; font-size: 18px; margin-top: 20px;">
-			Angels are celestial beings that are often depicted as messengers of God or as guardians of humans. They are commonly associated with light, purity, and divine will. In various religious texts, angels are described as having wings and a radiant appearance, symbolizing their heavenly nature.
+		<div class="angels">
+			<div>
+
+			</div>
+			<div>
+
+			</div>
+		</div>
 	</main>
 </body>
 <script>
