Fix title capitalization in index.html and add styles for angelsbanner and name-tag in style.css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
     <meta charset="UTF-8" />
     <meta name="Description" content="This site brings exiting news about vr and the virtual world we live in">
-    <title>Chains of heaven</title>
+    <title>Chains of Heaven</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <link rel="icon" type="image/png" href="images/Chains_Of_Heaven_4x.png">
 </head>
