Implement code changes to enhance functionality and improve performance

--- a/ane.html
+++ b/ane.html
@@ -2,60 +2,53 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <meta name="Description" content="This site brings exiting news about vr and the virtual world we live in">
-    <title>Chains of heaven</title>
+    <meta name="Description" content="Chains of heaven is a vtuber rock duo with a mission from the stars. Their mission? To ignite the world with positivity, kindness, and a whole lot of soul-shaking music.">
+    <title>Ane Angelic</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link rel="icon" type="image/png" href="images/Chains_Of_Heaven_4x.png">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
 
 
 <body>
-		<nav>
-			<div class="nav-inner">
-				<div class="nav-logo">
+	<nav>
+		<div class="nav-inner">
+			<div class="nav-logo">
 					<a href="Index.html"><img src="images/Chains_Of_Heaven_4x.png" alt="chains_of_heaven" style="height:130px"></a>
-				</div>
-				<div class="nav-center">
-					<div class="nav-links-row nav-links poppins-light">
-						<ul>
-							<li><a href="Index.html" onclick="dissolveToNextPage('index.html')">Home</a></li>
-							<li><a href="javascript:void(0)" onclick="dissolveToNextPage('about.html')">About</a></li>
-							<li><a href="javascript:void(0)" onclick="dissolveToNextPage('contact.html')">Contact</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="nav-store">
-					<div class="store">
-						<img src="images/external-link.png" alt="" style="height: 20px; width: 20px; margin-right: 5px;">
-						<a href="">STORE</a>
-					</div>
-				</div>
-				<button class="burger" aria-label="Open menu" onclick="toggleMenu()">
-					<span></span>
-					<span></span>
-					<span></span>
-				</button>
 			</div>
-		</nav>
+			<div class="nav-center">
+				<div class="nav-links-row nav-links poppins-light">
+					<ul>
+						<li><a href="Index.html" onclick="dissolveToNextPage('index.html')">Home</a></li>
+						<li><a href="javascript:void(0)" onclick="dissolveToNextPage('about.html')">About</a></li>
+						<li><a href="javascript:void(0)" onclick="dissolveToNextPage('contact.html')">Contact</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="nav-store">
+					<a href=""><div class="store">
+					<img src="images/external-link.png" alt="" style="height: 20px; width: 20px; margin-right: 5px;">
+					STORE
+				</div></a>
+			</div>
+			<button class="burger" aria-label="Open menu" onclick="toggleMenu()">
+					<span></span>
+					<span></span>
+					<span></span>
+			</button>
+		</div>
+	</nav>
+
 	<div class="fade-in">
-		<img src="images/deliverables_banner.png" alt="front_banner" style="width: 100%; height: auto; margin-top: 170px;">
-	<main>
-		<div class="header">
-			<div class="line"></div>
-			<div class="header-center"><h2>About us</h2></div>
-			<div class="line"></div>
-		</div>
-		<p class="poppins-light" style="text-align: center; color: white; font-size: 18px; margin-top: 20px;">
-			Angels are celestial beings that are often depicted as messengers of God or as guardians of humans. They are commonly associated with light, purity, and divine will. In various religious texts, angels are described as having wings and a radiant appearance, symbolizing their heavenly nature.
-		
-		<div class="header">
-			<div class="line"></div>
-			<div class="header-center"><h2>angels</h2></div>
-			<div class="line"></div>
-		</div>
-		<p class="poppins-light" style="text-align: center; color: white; font-size: 18px; margin-top: 20px;">
-			Angels are celestial beings that are often depicted as messengers of God or as guardians of humans. They are commonly associated with light, purity, and divine will. In various religious texts, angels are described as having wings and a radiant appearance, symbolizing their heavenly nature.
-	</main>
+
+
+
+	<div class="footer">
+
+	</div>
 </body>
 <script>
 function toggleMenu() {
