Fix navigation links and enhance footer layout in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
 		<nav>
 			<div class="nav-inner">
 				<div class="nav-logo">
-					<a href="Index.html"><img src="images/Chains_Of_Heaven_4x.png" alt="chains_of_heaven" style="height:130px"></a>
+					<a href="index.html"><img src="images/Chains_Of_Heaven_4x.png" alt="chains_of_heaven" style="height:130px"></a>
 				</div>
 				<div class="nav-center">
 					<div class="nav-links-row nav-links poppins-light">
 						<ul>
-							<li><a href="Index.html" onclick="dissolveToNextPage('index.html')">Home</a></li>
+							<li><a href="index.html" onclick="dissolveToNextPage('index.html')">Home</a></li>
 							<li><a href="javascript:void(0)" onclick="dissolveToNextPage('about.html')">About</a></li>
 							<li><a href="javascript:void(0)" onclick="dissolveToNextPage('contact.html')">Contact</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="nav-store">
-					<a href=""><div class="store">
+					<a href=""><div class="botton">
 						<img src="images/external-link.png" alt="" style="height: 20px; width: 20px; margin-right: 5px;">
 						STORE
 					</div></a>
@@ -82,7 +82,13 @@
 	</div>
 
 	<div class="footer">
-
+		<div class="footer-inner">
+		<img src="images/Chains_Of_Heaven_4x.png" alt="logo" style="height: 200px;">
+		<div><p class="poppins-light">Wanna work together?</p>
+			<a href=""><div class="botton">Contact us</div></a>
+		</div>
+		<p class="poppins-light">© 2023 Chains of Heaven <br> All rights reserved.</p>
+		</div>
 	</div>
 
 </body>
