Enhance navigation and footer styles in index.html and style.css; improve layout and responsiveness

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 				<div class="nav-center">
 					<div class="nav-links-row nav-links poppins-light">
 						<ul>
-							<li><a href="index.html" onclick="dissolveToNextPage('index.html')">Home</a></li>
-							<li><a href="javascript:void(0)" onclick="dissolveToNextPage('about.html')">About</a></li>
-							<li><a href="javascript:void(0)" onclick="dissolveToNextPage('contact.html')">Contact</a></li>
+							<li><a href="index.html" onclick="dissolveToNextPage('index.html')"><h3>Home</h3></a></li>
+							<li><a href="javascript:void(0)" onclick="dissolveToNextPage('about.html')"><h3>About</h3></a></li>
+							<li><a href="javascript:void(0)" onclick="dissolveToNextPage('contact.html')"><h3>Contact</h3></a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="nav-store">
-					<a href=""><div class="botton">
-						<img src="images/external-link.png" alt="" style="height: 20px; width: 20px; margin-right: 5px;">
-						STORE
+					<a href="https://advanced.gg/"><div class="botton">
+						<img src="images/external-link.png" alt="" style="height: 30px; width: auto; margin-right: 10px;">
+						<h3 class="poppins-bold">STORE</h3>
 					</div></a>
 				</div>
 				<button class="burger" aria-label="Open menu" onclick="toggleMenu()">
@@ -44,7 +44,7 @@
 
 	<div class="fade-in">
 
-		<img src="images/deliverables_banner.png" alt="front_banner" style="width: 100%; height: auto; margin-top: 170px;">
+		<img class="phone-banner" src="images/deliverables_banner.png" alt="front_banner" style="width: 100%; height: auto; margin-top: 180px;">
 	<div class="header">
 			<div class="line"></div>
 			<div class="header-center"><h2 class="poppins-bold">About us</h2></div>
@@ -65,7 +65,7 @@
 	<div class="angels">
     <a href="">
 		<div class="card">
-			<div class="card-img img-hover-zoom--colorize img-hover-zoom" style="background-color: rgb(75, 41, 104);">
+			<div class="card-img img-hover-zoom--colorize img-hover-zoom" style="background-color: #E98BBA;">
   			<img src="images/eune_pfp.png" alt="Kson" class="avatar">
 			</div>
   			<div class="name-tag poppins-bold">Eune Angelic</div>
@@ -73,7 +73,7 @@
 	</a>
 	<a href="ane.html">
 		<div class="card">
-			<div class="card-img img-hover-zoom--colorize img-hover-zoom" style="background-color: aquamarine;">
+			<div class="card-img img-hover-zoom--colorize img-hover-zoom" style="background-color: #BA7AC4;">
   			<img src="images/ane_pfp.png" alt="Kson" class="avatar">
 			</div>
   			<div class="name-tag poppins-bold">Ane Angelic</div>
@@ -83,11 +83,11 @@
 
 	<div class="footer">
 		<div class="footer-inner">
-		<img src="images/Chains_Of_Heaven_4x.png" alt="logo" style="height: 200px;">
-		<div><p class="poppins-light">Wanna work together?</p>
-			<a href=""><div class="botton">Contact us</div></a>
+		<img src="images/Chains_Of_Heaven_4x.png" alt="logo" style="height: 230px;">
+		<div><p class="poppins-light"><h4>Wanna work together?</h4></p>
+			<a href=""><div class="botton"><h3>Contact us</h3></div></a>
 		</div>
-		<p class="poppins-light">© 2023 Chains of Heaven <br> All rights reserved.</p>
+		<p class="poppins-light"><h4>© 2023 Chains of Heaven <br> All rights reserved.</h4></p>
 		</div>
 	</div>
 
